RESOLVED FIXED301113
Report OOM error when render/compute pipeline creation fails
https://bugs.webkit.org/show_bug.cgi?id=301113
Summary Report OOM error when render/compute pipeline creation fails
Mike Wyrzykowski
Reported 2025-10-20 11:49:16 PDT
Report OOM error when render/compute pipeline creation fails
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-20 11:49:33 PDT
Mike Wyrzykowski
Comment 2 2025-10-20 11:51:00 PDT
EWS
Comment 3 2025-10-21 08:12:20 PDT
Committed 301879@main (0d495098f89a): <https://commits.webkit.org/301879@main> Reviewed commits have been landed. Closing PR #52669 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.